--- a/template/base/home.html
+++ b/template/base/home.html
@@ -75,9 +75,10 @@
                 <h3 class="title">Contact Information</h3>
                 <div class="contact-details">
                     <p>Have a project idea? Click the button below to email me, and let's make it happen!</p>
+                    <p>Let's create something amazing together.</p>
                 </div>
                 <div class="mail-btn-cnt">
-                    <button class="mail-btn" type="button"><i class="fa-solid fa-envelope"></i> E-Mail Dev</button>
+                    <button class="mail-btn" type="button"><i class="fa-solid fa-envelope"></i> Let's Collaborate!</button>
                 </div>
             </div>
             <div class="footer-nav-cnt">
