--- a/template/user/profile.html
+++ b/template/user/profile.html
@@ -71,6 +71,9 @@
                     </div>
                 </div>
                 <div class="duration">July 2024 - July 2024</div>
+                <div class="experience-description-cnt">
+                    <p class="experience-description">Developed a full-stack Flipkart clone during my internship at JSW Steel Salem. Used Django for the backend and HTML, CSS, and JavaScript for the frontend, with cart functionality (payment gateway not included).</p>
+                </div>
             </div>
             <div class="delete-btn">
                 <i class="fa-regular fa-trash-can"></i>
@@ -98,7 +101,7 @@
                             <button type="button" class="edit-btn"><i class="fa-solid fa-pen"></i></button>
                         </div>
                     </div>
-                    <h4 class="degree">Bachelor of Engineering (BEng),</h4>
+                    <h4 class="degree">Bachelor of Engineering (BEng) <span class="grade">Grade : 8.6 CGPA</span></h4>
                     <p class="area-of-study">Computer Science</p>
                     <p class="duration">July 2022 - May 2026</p>
                 </div>
@@ -117,7 +120,7 @@
                             <button type="button" class="edit-btn"><i class="fa-solid fa-pen"></i></button>
                         </div>
                     </div>
-                    <h4 class="degree">Higher Secondary School Certificate,</h4>
+                    <h4 class="degree">Higher Secondary School Certificate <span class="grade">Grade : 85%</span></h4>
                     <p class="area-of-study">Maths-Computer Science</p>
                     <p class="duration">July 2021 - May 2022</p>
                 </div>
@@ -212,6 +215,9 @@
                     </div>
                     <div class="created-details">
                         <p class="created-on">July 2024 - August 2024</p>
+                    </div>
+                    <div class="certificate-description-cnt">
+                        <p class="certificate-description">I developed a sleek GPA Calculator using the Streamlit framework in Python. This application provides a user-friendly interface for quick and precise GPA calculations, featuring real-time data visualization and effortless data input.</p>
                     </div>
                     <button type="button" class="view-project-btn"><i class="fa-solid fa-arrow-up-right-from-square"></i> View Project</button>
                 </div>
