--- a/template/user/profile.html
+++ b/template/user/profile.html
@@ -292,4 +292,22 @@
         </div>
     </div>
 </div>
+<div class="testimonials-cnt">
+    <div class="testimonials-title-cnt">
+        <h1 class="testimonials-title">Testimonials <i class="fa-solid fa-comment-dots"></i></h1>
+        <div class="edit-cnt">
+            <button type="button" class="edit-btn"><i class="fa-solid fa-pen"></i></button>
+        </div>
+    </div>
+    <div class="comments-cnt">
+        <div class="comments">
+            <h4 class="comment-by">Sathiya G</h4>
+            <p class="message">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ullam vel molestiae sint? Sunt vel sapiente accusantium illo quos porro delectus consectetur eaque, sit voluptates asperiores a quaerat optio architecto dicta?</p>
+        </div>
+        <div class="comments">
+            <h4 class="comment-by">Jaganathan M</h4>
+            <p class="message">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ullam vel molestiae sint? Sunt vel sapiente accusantium illo quos porro delectus consectetur eaque, sit voluptates asperiores a quaerat optio architecto dicta?</p>
+        </div>
+    </div>
+</div>
 {% endblock %}
