--- a/static/css/home.css
+++ b/static/css/home.css
@@ -5,7 +5,8 @@
     box-sizing: border-box;
 }
 body{
-    background-image: linear-gradient(to top, #fad0c4 0%, #ffd1ff 100%);
+    /* background-image: linear-gradient(to top, #fad0c4 0%, #ffd1ff 100%); */
+    background-color: whitesmoke;
 }
 /* Navbar style */
 .nav-bar,
