added the hover effect to the navlink

--- a/template/base/home.html
+++ b/template/base/home.html
@@ -27,10 +27,10 @@
                 <h1 class="logo-name">Portfolio</h1>
             </div>
             <div class="nav-links">
-                <a href="" class="nav-link">Home</a>
-                <a href="" class="nav-link">About</a>
-                <a href="" class="nav-link">Contact</a>
-                <a href="" class="nav-link">Blogs</a>
+                <a href="" class="nav-link b">Home</a>
+                <a href="" class="nav-link b">About</a>
+                <a href="" class="nav-link b">Contact</a>
+                <a href="" class="nav-link b">Blogs</a>
             </div>
         </div>
         <div class="searchbar-profile-cnt">
