--- a/static/css/home.css
+++ b/static/css/home.css
@@ -33,10 +33,25 @@ body{
     gap: 20px;
 }
 .nav-link{
+    position: relative;
     font-size: 1.1rem;
     color: black;
     text-decoration: none;
     transition: all 0.2s ease;
+}
+.nav-link.b::before{
+    position: absolute;
+    content: "";
+    width: 0;
+    left: 0;
+    bottom: -5px;
+    height: 3px;
+    border-radius: 5px;
+    background-color: rgb(37, 149, 224);
+    transition: all 0.3s ease;
+}
+.nav-link.b:hover::before{
+    width: 100%;
 }
 .nav-link:hover{
     color: rgb(37, 149, 224);
@@ -111,6 +126,7 @@ body{
     gap: 20px;
     margin: 50px 100px;
     padding: 1rem;
+    max-width: 2000px;
     font-family: Nunito sans;
     border-radius: 10px;
 }
