--- a/template/user/profile.html
+++ b/template/user/profile.html
@@ -12,7 +12,7 @@
     <div class="profile-cnt">
         <div class="profile">
             <div class="profile-photo-cnt">
-                <img src="{% static 'images\profile\profilepic.jpg' %}" alt="" class="profile-photo">
+                <img src="{% static 'images\profile\image.png' %}" alt="" class="profile-photo">
             </div>
             <div class="edit-cnt">
                 <button type="button" class="edit-btn"><i class="fa-solid fa-pen"></i></button>
