--- a/static/css/home.css
+++ b/static/css/home.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Capriola&family=Mochiy+Pop+P+One&family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Tilt+Neon&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c&display=swap');
 *{
     margin: 0;
     padding: 0;
@@ -70,6 +71,7 @@ body{
     padding: 10px;
     border: 1px solid #ccc;
     font-size: 13px;
+    letter-spacing: 1px;
     border-radius: 4px 0 0 4px;
     border-right: 0;
     transition: all 0.3s ease;
@@ -146,6 +148,7 @@ body{
 }
 .footer-cols{
     display: grid;
+    grid-template-columns: repeat(3, 1fr);
     width: 100%;
     gap: 40px;
     margin-bottom: 40px;
