--- a/template/auth/login.html
+++ b/template/auth/login.html
@@ -36,7 +36,7 @@
                 <div class="input-box">
                     <input type="password" name="password" id="password" placeholder="Password">
                     <i class="fa-solid fa-lock"></i>
-                    <div id="password_error" class="error"></div>
+                    <div id="password_error" class="error">{{ error }}</div>
                 </div>
             </div>
             <div class="invalid-credential-error-cnt">
