--- a/template/base/home.html
+++ b/template/base/home.html
@@ -27,7 +27,7 @@
                 <h1 class="logo-name">Portfolio</h1>
             </div>
             <div class="nav-links">
-                <a href="" class="nav-link b">Home</a>
+                <a href="{% url 'home' %}" class="nav-link b">Home</a>
                 <a href="" class="nav-link b">About</a>
                 <a href="" class="nav-link b">Contact</a>
                 <a href="" class="nav-link b">Blogs</a>
@@ -39,17 +39,19 @@
                 <div class="searchbox">
                     <input type="text" id="search" name="search" placeholder="Type to search" class="search">
                 </div>
-                <button type="submit" class="search-btn"><i class="fa-solid fa-magnifying-glass"></i> Search</button>
+                <button type="submit" class="search-btn"><i class="fa-solid fa-magnifying-glass"></i></button>
             </form>
-            <div class="login-signup-cnt">
-                <a href="{% url 'user_login' %}" class="nav-link"><button type="button" class="signin-signup-btn">Sign In / Sign Up</button></a>
-            </div>
-            <!-- <div class="user-profile-cnt">
-                <div class="user-profile">
-                    <img src="{% static 'images/profile/profilepic.jpg' %}" alt="" class="user-profile-photo">
+            {% if not user.is_authenticated %}
+                <div class="login-signup-cnt">
+                    <a href="{% url 'user_login' %}" class="nav-link"><button type="button" class="signin-signup-btn">Sign In / Sign Up</button></a>
                 </div>
-                <p>Keerthivasansj</p>
-            </div> -->
+            {% else %}
+                <div class="user-profile-cnt">
+                    <div class="user-profile">
+                        <img src="{% static 'images/profile/profilepic.jpg' %}" alt="" class="user-profile-photo">
+                    </div>
+                </div> 
+            {% endif %}
         </div>
     </nav>
     {% endblock %}
