--- a/template/auth/login.html
+++ b/template/auth/login.html
@@ -29,7 +29,7 @@
             </div>
             <div class="input-cnt">
                 <div class="input-box">
-                    <input type="text" name="uname_or_email" id="uname_or_email" placeholder="Username or Email">
+                    <input type="text" name="uname_or_email" id="uname_or_email" placeholder="Username">
                     <i class="fa-solid fa-user"></i>
                     <div id="uname_or_email_error" class="error"></div>
                 </div>
