--- a/template/base/home.html
+++ b/template/base/home.html
@@ -47,8 +47,19 @@
                 </div>
             {% else %}
                 <div class="user-profile-cnt">
-                    <div class="user-profile">
-                        <img src="{% static 'images/profile/profilepic.jpg' %}" alt="" class="user-profile-photo">
+                    <div class="notification">
+                        <i class="fa-regular fa-bell"></i>
+                    </div>
+                    <div class="user-profile-dropdown">
+                        <div class="user-profile">
+                            <img src="{% static 'images/profile/profilepic.jpg' %}" alt="" class="user-profile-photo">
+                        </div>
+                        <i class="fa-solid fa-chevron-down"></i>
+                    </div>
+                    <div class="dropdown-menu">
+                        <a class="dropdown-menu-link" href=""><i class="fa-solid fa-gear"></i> Settings</a>
+                        <a class="dropdown-menu-link" href="{% url 'user_profile' user.username %}"><i class="fa-solid fa-user"></i> Profile</a>
+                        <a class="dropdown-menu-link" href="{% url 'user_logout' %}"><i class="fa-solid fa-arrow-right-from-bracket"></i> Logout</a>
                     </div>
                 </div> 
             {% endif %}
@@ -102,5 +113,7 @@
         </div>
     </footer>
     {% endblock %}
+
+    <script src="{% static 'js/home.js' %}"></script>
 </body>
 </html>
