added visibility to the edit option in the user profile based on the authentication status

--- a/template/base/home.html
+++ b/template/base/home.html
@@ -113,7 +113,8 @@
         </div>
     </footer>
     {% endblock %}
-
+    {% block script %}
     <script src="{% static 'js/home.js' %}"></script>
+    {% endblock %}
 </body>
 </html>
