--- a/template/user/profile.html
+++ b/template/user/profile.html
@@ -14,14 +14,18 @@
             <div class="profile-photo-cnt">
                 <img src="{% static 'images/profile/profilepic.jpg' %}" alt="" class="profile-photo">
             </div>
+            {% if user.is_authenticated %}
             <div class="edit-cnt">
                 <button type="button" class="edit-btn"><i class="fa-solid fa-pen"></i></button>
             </div>
+            {% endif %}
         </div>
         <div class="user-identity-cnt">
             <div class="name-cnt">
                 <h1 class="name">Keerthivasan S J <span class="pronouns">(He/Him)</span></h1>
+                {% if user.is_authenticated %}
                 <button type="button" class="edit-btn"><i class="fa-solid fa-pen"></i></button>
+                {% endif %}
             </div>
             <h3 class="uname"><i class="fa-regular fa-id-badge"></i> {{uname}}</h3>
             <p class="dob"><i class="fa-solid fa-cake-candles"></i> 16/12/2004</p>
@@ -42,9 +46,11 @@
 <div class="profile-about-cnt">
     <div class="profile-about-title-cnt">
         <h1 class="profile-about-title">Expert Web Designer with Django experience</h1>
+        {% if user.is_authenticated %}
         <div class="edit-cnt">
             <button type="button" class="edit-btn"><i class="fa-solid fa-pen"></i></button>
         </div>
+        {% endif %}
     </div>
     <div class="profle-about-me-cnt">
         <p class="profile-about-me">
@@ -56,9 +62,11 @@
 <div class="experiences-cnt">
     <div class="experiences-title-cnt">
         <h1 class="experiences-title">Experience <i class="fa-solid fa-briefcase"></i></h1>
+        {% if user.is_authenticated %}
         <div class="add-btn">
             <i class="fa-regular fa-square-plus"></i>
         </div>
+        {% endif %}
     </div>
     <div class="experiences-list">
         <!--  -->
@@ -66,18 +74,22 @@
             <div class="experience-detail">
                 <div class="job-role-cnt">
                     <h2 class="job-role">Web Developer Intern | JSW Steel</h2>
+                    {% if user.is_authenticated %}
                     <div class="edit-cnt">
                         <button type="button" class="edit-btn"><i class="fa-solid fa-pen"></i></button>
                     </div>
+                    {% endif %}
                 </div>
                 <div class="duration">July 2024 - July 2024</div>
                 <div class="experience-description-cnt">
                     <p class="experience-description">Developed a full-stack Flipkart clone during my internship at JSW Steel Salem. Used Django for the backend and HTML, CSS, and JavaScript for the frontend, with cart functionality (payment gateway not included).</p>
                 </div>
             </div>
+            {% if user.is_authenticated %}
             <div class="delete-btn">
                 <i class="fa-regular fa-trash-can"></i>
             </div>
+            {% endif %}
         </div>
         <!--  -->
     </div>
@@ -86,9 +98,11 @@
 <div class="education-cnt">
     <div class="education-title-cnt">
         <h1 class="education-title">Education <i class="fa-solid fa-graduation-cap"></i></h1>
+        {% if user.is_authenticated %}
         <div class="add-btn">
             <i class="fa-regular fa-square-plus"></i>
         </div>
+        {% endif %}
     </div>
     <div class="education-list">
         <!--  -->
@@ -97,18 +111,22 @@
                 <div class="education-information-cnt">
                     <div class="institution-name-cnt">
                         <h2 class="institution-name">K Ramakrishnan College of Technology</h2>
+                        {% if user.is_authenticated %}
                         <div class="edit-cnt">
                             <button type="button" class="edit-btn"><i class="fa-solid fa-pen"></i></button>
                         </div>
+                        {% endif %}
                     </div>
                     <h4 class="degree">Bachelor of Engineering (BEng) <span class="grade">Grade : 8.6 CGPA</span></h4>
                     <p class="area-of-study">Computer Science</p>
                     <p class="duration">July 2022 - May 2026</p>
                 </div>
             </div>
+            {% if user.is_authenticated %}
             <div class="delete-btn">
                 <i class="fa-regular fa-trash-can"></i>
             </div>
+            {% endif %}
         </div>
         <!--  -->
         <div class="education-detail-cnt">
@@ -116,18 +134,22 @@
                 <div class="education-information-cnt">
                     <div class="institution-name-cnt">
                         <h2 class="institution-name">Malco Vidhyalaya Matric Hir Sec School</h2>
+                        {% if user.is_authenticated %}
                         <div class="edit-cnt">
                             <button type="button" class="edit-btn"><i class="fa-solid fa-pen"></i></button>
                         </div>
+                        {% endif %}
                     </div>
                     <h4 class="degree">Higher Secondary School Certificate <span class="grade">Grade : 85%</span></h4>
                     <p class="area-of-study">Maths-Computer Science</p>
                     <p class="duration">July 2021 - May 2022</p>
                 </div>
             </div>
+            {% if user.is_authenticated %}
             <div class="delete-btn">
                 <i class="fa-regular fa-trash-can"></i>
             </div>
+            {% endif %}
         </div>
         <!--  -->
     </div>
@@ -136,9 +158,11 @@
 <div class="certifications-cnt">
     <div class="certification-title-cnt">
         <h1 class="certification-title">Certifications <i class="fa-solid fa-award"></i></h1>
+        {% if user.is_authenticated %}
         <div class="add-btn">
             <i class="fa-regular fa-square-plus"></i>
         </div>
+        {% endif %}
     </div>
     <div class="certificate-list">
         <!--  -->
@@ -150,9 +174,11 @@
                 <div class="certificate-details">
                     <div class="certificate-name-cnt">
                         <h2 class="certificate-name">Programming, Data Structures and Algorithms using Python</h2>
+                        {% if user.is_authenticated %}
                         <div class="edit-cnt">
                             <button type="button" class="edit-btn"><i class="fa-solid fa-pen"></i></button>
                         </div>
+                        {% endif %}
                     </div>
                     <div class="issued-details">
                         <h4 class="issued-by">Issued By: NPTEL</h4>
@@ -160,9 +186,11 @@
                     </div>
                     <button type="button" class="view-certificate-btn"><i class="fa-solid fa-arrow-up-right-from-square"></i> View Certificate</button>
                 </div>
+                {% if user.is_authenticated %}
                 <div class="delete-btn">
                     <i class="fa-regular fa-trash-can"></i>
                 </div>
+                {% endif %}
             </div>
         </div>
         <!--  -->
@@ -174,9 +202,11 @@
                 <div class="certificate-details">
                     <div class="certificate-name-cnt">
                         <h2 class="certificate-name">Joy of Computing Using Python</h2>
+                        {% if user.is_authenticated %}
                         <div class="edit-cnt">
                             <button type="button" class="edit-btn"><i class="fa-solid fa-pen"></i></button>
                         </div>
+                        {% endif %}
                     </div>
                     <div class="issued-details">
                         <h4 class="issued-by">Issued By: NPTEL</h4>
@@ -184,9 +214,11 @@
                     </div>
                     <button type="button" class="view-certificate-btn"><i class="fa-solid fa-arrow-up-right-from-square"></i> View Certificate</button>
                 </div>
+                {% if user.is_authenticated %}
                 <div class="delete-btn">
                     <i class="fa-regular fa-trash-can"></i>
                 </div>
+                {% endif %}
             </div>
         </div>
         <!--  -->
@@ -196,9 +228,11 @@
 <div class="project-cnt">
     <div class="project-title-cnt">
         <h1 class="project-title">Projects <i class="fa-solid fa-gear"></i></h1>
+        {% if user.is_authenticated %}
         <div class="add-btn">
             <i class="fa-regular fa-square-plus"></i>
         </div>
+        {% endif %}
     </div>
     <div class="project-list">
         <div class="project">
@@ -209,9 +243,11 @@
                 <div class="project-details">
                     <div class="project-name-cnt">
                         <h2 class="project-name">GPA Calculator</h2>
+                        {% if user.is_authenticated %}
                         <div class="edit-cnt">
                             <button type="button" class="edit-btn"><i class="fa-solid fa-pen"></i></button>
                         </div>
+                        {% endif %}
                     </div>
                     <div class="created-details">
                         <p class="created-on">July 2024 - August 2024</p>
@@ -221,9 +257,11 @@
                     </div>
                     <button type="button" class="view-project-btn"><i class="fa-solid fa-arrow-up-right-from-square"></i> View Project</button>
                 </div>
+                {% if user.is_authenticated %}
                 <div class="delete-btn">
                     <i class="fa-regular fa-trash-can"></i>
                 </div>
+                {% endif %}
             </div>
         </div>
     </div>
@@ -232,9 +270,11 @@
 <div class="profile-skills-cnt">
     <div class="profile-skills-title-cnt">
         <h1 class="profile-skills-title">Skills <i class="fa-solid fa-person-snowboarding"></i></h1>
+        {% if user.is_authenticated %}
         <div class="edit-cnt">
             <button type="button" class="edit-btn"><i class="fa-solid fa-pen"></i></button>
         </div>
+        {% endif %}
     </div>
     <div class="profle-skills-list">
         <span class="skills intermediate">Django</span>
@@ -269,9 +309,11 @@
 <div class="languages-known-cnt">
     <div class="languages-known-title-cnt">
         <h1 class="languages-known-title">Languages Known <i class="fa-solid fa-earth-asia"></i></h1>
+        {% if user.is_authenticated %}
         <div class="edit-cnt">
             <button type="button" class="edit-btn"><i class="fa-solid fa-pen"></i></button>
         </div>
+        {% endif %}
     </div>
     <div class="languages-known-list">
         <span class="languages expert">Tamil</span>
@@ -295,9 +337,11 @@
 <div class="testimonials-cnt">
     <div class="testimonials-title-cnt">
         <h1 class="testimonials-title">Testimonials <i class="fa-solid fa-comment-dots"></i></h1>
+        {% if user.is_authenticated %}
         <div class="edit-cnt">
             <button type="button" class="edit-btn"><i class="fa-solid fa-pen"></i></button>
         </div>
+        {% endif %}
     </div>
     <div class="comments-cnt">
         <div class="comments">
