--- a/static/css/base_form.css
+++ b/static/css/base_form.css
@@ -9,6 +9,7 @@
 body{
     background-color: whitesmoke;
     font-family: Nunito Sans;
+    height: 100vh;
 }
 .logo-cnt{
     display: flex;
@@ -18,48 +19,42 @@ body{
 }
 .main-cnt{
     display: flex;
-    padding: 30px;
     justify-content: center;
     align-items: center;
 }
+section,
 .form-cnt,
-.input-cnt{
+.form-components{
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    gap: 20px;
-    align-items: center;
+    gap: 40px;
+    padding: 40px 30px;
 }
-.input-cnt{
-    gap: 30px;
+section{
+    padding: 0;
 }
-.form-title{
-    margin-bottom: 20px;
+.form-components{
+    gap: 50px;
 }
 .form-cnt{
-    padding: 40px 30px;
     border: 1px solid #ccc;
     background-color: #fff;
     border-radius: 10px;
     box-shadow: #ccc 10px 10px 40px;
+    gap: 40px;
 }
 .input-box{
-    position: relative;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
 }
-.input-box>i{
+.input-box>input,
+.input-box-with-i>input{
     font-size: 1rem;
-    position: absolute;
-    left: 20px;
-    top: 20px;
-    vertical-align: middle;
-}
-.input-box>input{
-    font-size: 1rem;
-    /* font-family: "M PLUS Rounded 1c", sans-serif; */
     font-family: "Roboto", sans-serif;
     line-height: 2rem;
     width: 300px;
-    padding: 10px 30px 10px 45px;
+    padding: 10px 20px;
     border: 2px solid #bebebe;
     border-radius: 5px;
     transition: all 0.2s ease;
@@ -71,37 +66,63 @@ body{
     outline: none;
     border-color: rgb(37, 149, 224);
 }
-.form-links-cnt{
-    width: 100%;
+.name-input-cnt,
+.address-input-cnt,
+.contact-input-cnt,
+.social-link-input-cnt
+{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 30px;
 }
-.form-links{
+.gender-list{
     display: flex;
-    flex-direction: column;
+    padding: 0 10px;
+    gap: 30px;
+}
+.option{
+    display: flex;
+    align-items: center;
     gap: 20px;
+    margin-top: 20px;
 }
-.form-links a{
-    text-decoration: none;
-    color: rgb(37, 149, 224);
+input[type = "radio"]{
+    transform: scale(2);
 }
-.submit-cnt{
-    width: 100%;
+.required{
+    color: red;
 }
-.signup-btn,
-.signin-btn{
-    padding: 14px 21px;
-    border-radius: 4px;
-    font-size: 1rem;
+.social-link-input-box>input{
+    padding: 10px 20px 10px 45px;
+}
+.social-link-input-box{
+    position: relative;
+}
+.social-link-input-box>label{
+    position: absolute;
+    top: 10px;
+    left: 12px;
+    font-size: 25px;
+}
+.input-box-with-i{
+    position: relative;
+}
+.input-box-with-i>input{
+    padding: 10px 30px 10px 45px;
+}
+.input-box-with-i>i{
+    position: absolute;
+    top: 20px;
+    left: 20px;
+}
+.submit-btn{
+    padding: 25px;
+    border-radius: 5px;
+    font-size: 20px;
     font-weight: 500;
     color: white;
+    margin-top: 30px;
     border: none;
     width: 100%;
     background-color: rgb(37, 149, 224);
 }
-.error{
-    color: red;
-}
-.invalid-credential-error-cnt{
-    width: 100%;
-}
-
-/* Style for Sign In */
