changed somed spelling mistakes

--- a/template/auth/login.html
+++ b/template/auth/login.html
@@ -25,7 +25,7 @@
         <form action="" class="form-cnt" method="post">
             {% csrf_token %}
             <div class="form-title">
-                <h1 class="title">Sign Up</h1>
+                <h1 class="title">Sign In</h1>
             </div>
             <div class="input-cnt">
                 <div class="input-box">
@@ -48,7 +48,7 @@
                         <a href="">Forgot password?</a>
                     </div>
                     <div class="signin">
-                        <p>Don't have an account? <a href="{% url 'personal_details_form' %}">Sign In</a></p>
+                        <p>Don't have an account? <a href="{% url 'personal_details_form' %}">Sign Up</a></p>
                     </div>
                 </div>
             </div>
