--- a/template/auth/signin.html
+++ b/template/auth/signin.html
@@ -6,7 +6,7 @@
 <form action="" class="form-cnt" method="post">
     {% csrf_token %}
     <div class="form-title">
-        <h1 class="title">Sign In</h1>
+        <h1 class="title">Sign Up</h1>
     </div>
     <div class="input-cnt">
         <div class="input-box">
@@ -38,7 +38,7 @@
     <div class="form-links-cnt">
         <div class="form-links">
             <div class="signin">
-                <p>Already have an account? <a href="{% url 'user_login' %}">Sign Up</a></p>
+                <p>Already have an account? <a href="{% url 'user_login' %}">Sign In</a></p>
             </div>
         </div>
     </div>
