--- a/static/css/login.css
+++ b/static/css/login.css
@@ -1,93 +1,121 @@
 @import url('https://fonts.googleapis.com/css2?family=Capriola&family=Mochiy+Pop+P+One&family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Tilt+Neon&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
-*{
+
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
-body{
+
+body {
     background-color: whitesmoke;
     font-family: Nunito Sans;
 }
-.logo-cnt{
+
+.container {
+    max-width: 1200px;
+    width: 100%;
+    margin: 0 auto;
+}
+
+.logo-cnt {
     display: flex;
     align-items: center;
     gap: 20px;
     padding: 30px;
 }
-.main-cnt{
+
+.main-cnt {
     display: flex;
-    padding: 30px;
     justify-content: center;
     align-items: center;
 }
+
 .form-cnt,
-.input-cnt{
+.input-cnt {
     display: flex;
     flex-direction: column;
     justify-content: center;
     gap: 20px;
     align-items: center;
+    width: 100%;
 }
-.input-cnt{
+
+.input-cnt {
     gap: 30px;
 }
-.form-title{
+
+.form-title {
     margin-bottom: 20px;
 }
-.form-cnt{
-    padding: 40px 30px;
+
+.form-cnt {
+    min-width: 200px;
+    width: 600px;
+    padding: 20px;
     border: 1px solid #ccc;
     background-color: #fff;
     border-radius: 10px;
     box-shadow: #ccc 10px 10px 40px;
 }
-.input-box{
+
+.input-box {
     position: relative;
+    width: 100%;
 }
-.input-box>i{
+
+.input-box > i {
     font-size: 1rem;
     position: absolute;
     left: 20px;
     top: 20px;
     vertical-align: middle;
+    color: #555;
+    pointer-events: none;
 }
-.input-box>input{
+
+.input-box > input {
     font-size: 1rem;
-    /* font-family: "M PLUS Rounded 1c", sans-serif; */
     font-family: "Roboto", sans-serif;
     line-height: 2rem;
-    width: 300px;
+    width: 100%;
     padding: 10px 30px 10px 45px;
     border: 2px solid #bebebe;
     border-radius: 5px;
     transition: all 0.2s ease;
 }
-.input-box>input:hover{
+
+.input-box > input:hover {
     border-color: #707070;
 }
-.input-box>input:focus{
+
+.input-box > input:focus {
     outline: none;
     border-color: rgb(37, 149, 224);
 }
-.form-links-cnt{
+
+.form-links-cnt {
     width: 100%;
 }
-.form-links{
+
+.form-links {
     display: flex;
     flex-direction: column;
     gap: 20px;
 }
-.form-links a{
+
+.form-links a {
     text-decoration: none;
     color: rgb(37, 149, 224);
 }
-.submit-cnt{
+
+.submit-cnt {
     width: 100%;
 }
+
 .signup-btn,
-.signin-btn{
+.signin-btn {
     padding: 14px 21px;
     border-radius: 4px;
     font-size: 1rem;
@@ -97,11 +125,65 @@ body{
     width: 100%;
     background-color: rgb(37, 149, 224);
 }
-.error{
+
+.error {
     color: red;
 }
-.invalid-credential-error-cnt{
+
+.invalid-credential-error-cnt {
     width: 100%;
 }
 
-/* Style for Sign In */
+.input-box > select,
+.input-box > input[type="date"],
+.input-box > input[type="file"] {
+    font-size: 1rem;
+    font-family: "Roboto", sans-serif;
+    line-height: 2rem;
+    width: 100%;
+    padding: 10px 30px 10px 45px;
+    border: 2px solid #bebebe;
+    border-radius: 5px;
+    transition: all 0.2s ease;
+    appearance: none;
+    background-color: white;
+}
+
+.input-box > select:hover,
+.input-box > input[type="date"]:hover,
+.input-box > input[type="file"]:hover {
+    border-color: #707070;
+}
+
+.input-box > select:focus,
+.input-box > input[type="date"]:focus,
+.input-box > input[type="file"]:focus {
+    outline: none;
+    border-color: rgb(37, 149, 224);
+}
+
+.input-box > input[type="file"] {
+    padding-left: 45px;
+    color: #555;
+}
+
+.form-messages {
+    width: 100%;
+    margin-bottom: 15px;
+}
+.message {
+    padding: 10px;
+    border-radius: 4px;
+    margin-bottom: 10px;
+    font-weight: 500;
+}
+.message.error {
+    background-color: #ffe0e0;
+    color: #c00;
+    border: 1px solid #c00;
+}
+.message.success {
+    background-color: #e0ffe6;
+    color: #007d34;
+    border: 1px solid #007d34;
+}
